some fixes in layout overlaping and adjustments in contact section

--- a/src/css/layout/_layout.scss
+++ b/src/css/layout/_layout.scss
@@ -328,6 +328,10 @@ a {
 
 	p {
 		margin: 1.2em 0;
+
+		@media (max-width: 768px) {
+			margin: 0.75em 0;
+		}
 	}
 }
 
@@ -420,6 +424,11 @@ a {
 
 	textarea {
 		min-height: 10.5em;
+
+		@media (max-width: 768px) {
+			min-height: 6.5em;
+		}
+
 	}
 
 	@media (min-width: 769px) {
@@ -529,6 +538,10 @@ a {
 			background: url("../pics/batsign.png") center/contain no-repeat transparent;
 		}
 	}
+
+	@media (max-width: 768px) {
+		margin: 1em 0;
+	}
 }
 
 .shapeContainer {
@@ -613,7 +626,7 @@ a {
 		z-index: 1000000;
 
 		ul {
-			display: flex;
+			display: none;
 			flex-direction: column;
 			height: 30px;
 			width: 50px;
@@ -670,7 +683,11 @@ a {
 
 		.mobileMenu__trigger {
 			width: 50px;
-			height: 50px;			
+			height: 50px;	
+			
+			ul {
+				display: flex;
+			}		
 		}
 	}
 	
