--- a/src/css/pages/_home__bem.scss
+++ b/src/css/pages/_home__bem.scss
@@ -4,6 +4,7 @@
 	// padding-top: 0;	
 	padding: 0;
 	height: 100vh;
+	background-color: #212121;
 	
     z-index: 10000;
 
